# linkedin_scraper

./: README.md  pyproject.toml  setup.py
linkedin_scraper/: person.py  utils.py
