[tool.poetry]
name = "linkedin-scraper"
version = "2.11.3"
description = ""
authors = ["SW GA SUKI DA TO SAKABITAI <timothy_shee@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "4.9.3"
requests = "2.31.0"
selenium = "4.14.0"
backoff = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
